# AI-Hands-and-Minds-Workshop7-thru-11

./: main.py  pyproject.toml  requirements.txt  w11_streamlit.py  w12_streamlit.py  w7_w8_w9_w10_AllOtherFiles.txt  w7_w8_w9_w10_w11_AllOtherFiles.txt  w9_lambda_file_claim.py  w9_lambda_get_policy.py  w9_lambda_get_quote.py
